# sigil

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: publish.yml  tests.yml
examples/helloworld/: main.py  manifest.yml
examples/helloworld/scripts/: root.py
examples/helloworld/yml/: root.yml
examples/mycli/: manifest.yml
examples/mycli/scripts/: calc_add.py  calc_mul.py  fileops.py  fileops_count.py  fileops_list.py
examples/mycli/yml/: calc.yml  fileops.yml  root.yml
schemas/: command.schema.json  manifest.schema.json
src/sigil/: __init__.py  __main__.py  entrypoint.py
src/sigil/cli_tools/: init.py  validate.py
src/sigil/models/: __init__.py  argparser.py  argument.py  command.py  script.py
src/sigil/stages/: __init__.py  builder.py  resolver.py  script_loader.py  yaml_reader.py
tests/: conftest.py  test_builder.py  test_cli_tools.py  test_integration.py  test_reader.py  test_resolver.py  test_scriptloader.py  test_validate.py
