[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil-cli"
version = "1.1.1"
description = "Configuration driven CLI builder with subcommands and script loading"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kenzo Staelens", email = "kenzostael@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
completion = ["argcomplete>=3.0"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/kenzo-staelens/sigil"
Repository = "https://github.com/kenzo-staelens/sigil"
Issues = "https://github.com/kenzo-staelens/sigil/issues"

[project.scripts]
sigil = "sigil.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = [
    "src/sigil/__main__.py"
]